# nk-lexicon

./: .gitignore  CLAUDE.md  LICENSE.md  pyproject.toml
.claude/rules/: code-style.md  data.md  nlp.md  testing.md
nk_lexicon/: __main__.py  build_dict.py  preprocess.py  validate.py
tests/: test_build_dict.py  test_preprocess.py
